--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ categories = ["command-line-utilities", "science", "visualization"]
 clap = { version = "4.5.40", features = ["derive"] }
 globset = "0.4.16"
 image = "0.25.6"
+tracing = "0.1.41"
 
 # We simplify the binary name to `trapir`
 # to avoid unnecessary complexity in the CLI.
